폰트 크기 키움

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .link-notion {
+      padding: 15px;
+      text-align:center;
+      
+    }
+    .link-notion a {
+      font-size: 18px;
+    }
+  </style>
 </head>
 <body>
-  <a href="https://www.notion.so/NC-Study-with-me-68ac3439ed074903bbea0f63813003c5" target="_blank">Notion</a>
+  <div class="link-notion">
+    <a href="https://www.notion.so/NC-Study-with-me-68ac3439ed074903bbea0f63813003c5" target="_blank">Notion</a>
+  </div>
 </body>
 </html>
