--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="link-notion">
-    <a href="https://www.notion.so/NC-Study-with-me-68ac3439ed074903bbea0f63813003c5" target="_blank">Notion</a>
+    <a href="https://www.notion.so/3d932752c81945d280bffba9687f5bb1" target="_blank">Notion 시즌 출석부</a>
   </div>
 </body>
 </html>
